mise à jour du main

--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -43,7 +43,7 @@
 
 \section*{Remerciements}
 
-Nous tenons à remercier Mr Mathieu LAFOURCADE pour ses conseils, son aide et ses remarques qui nous ont permis de réaliser ce projet.
+Nous tenons à remercier Mr Mathieu LAFOURCADE pour ses conseils, son aide et ses remarques qui nous ont permis de réaliser ce projet. 
 
 \newpage
 
@@ -55,5 +55,8 @@ Nous tenons à remercier Mr Mathieu LAFOURCADE pour ses conseils, son aide et se
 \pagenumbering{arabic}
 
 \input{2-Analyse}
+\input{3-Rapport_technique}
+\input{4-Rapport_activite}
+\input{5-Conclusion}
 
 \end{document}
